--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<version>1.0-SNAPSHOT</version>
 	<name>mms Maven Webapp</name>
 	<url>http://maven.apache.org</url>
-
+	<!--  aaaa -->
 	<properties>
 		<!-- spring版本号 -->
 		<spring.version>4.0.2.RELEASE</spring.version>
