--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,7 @@
 	<name>mms Maven Webapp</name>
 	<url>http://maven.apache.org</url>
 	<!--  aaaa -->
+	<!--  test 	分支-->
 	<properties>
 		<!-- spring版本号 -->
 		<spring.version>4.0.2.RELEASE</spring.version>
